# project1_sargsyan_narek_m25_555

./: .gitignore  README.md  demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
