[tool.poetry]
name = "project1-sargsyan-narek-m25-555"
version = "0.1.0"
description = ""
authors = ["Narek Sargsyan <thenarek777@gmail.com>"]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 